# Face_app2

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/joy_l/face_app/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/joy_l/face_app/: Configurations.java  EnrollActivity.java  EnrollmentActivity.java  MainActivity.java  OpencvNativeClass.java  PreviewActivity.java  PreviewOpencv.java
app/src/main/jni/: Android.mk  Application.mk  Helpers.h  com_example_joy_l_face_app_OpencvNativeClass.cpp  com_example_joy_l_face_app_OpencvNativeClass.h  com_example_joy_l_face_app_PreviewOpencv.cpp  com_example_joy_l_face_app_PreviewOpencv.h
app/src/main/res/layout/: activity_configurations.xml  activity_display_message.xml  activity_enroll.xml  activity_enrollment.xml  activity_main.xml  activity_preview.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/example/joy_l/face_app/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary2411/: build.gradle
